ninth random commit: Adventure logic now sort of working, at least when creating a new Adventure. Need to still do a check if already exists first, but otherwise good.